# rust-auth

./: .env.template  README.md  compose.yaml
app/: .gitignore  Cargo.toml  Makefile  package.json  tailwind.config.js
app/migrations/: 20240715103257_create-users-table.sql
app/scripts/: htmx-ext-loading-states.js  main.js
app/src/: api.rs  config.rs  db.rs  lib.rs  libs.rs  main.rs  server.rs  state.rs  tracing.rs
app/src/api/: app.rs  asset.rs  auth.rs  constant.rs  layer.rs  layers.rs  main.rs  middleware.rs  middlewares.rs  protected.rs  response.rs  router.rs
app/src/api/app/: asset.rs  auth.rs  main.rs
app/src/constants/: auth.rs
app/src/db/: connection.rs  user.rs  users.rs
app/src/libs/: asset.rs  auth.rs  password.rs  signal.rs  validation.rs
app/src/operations/: auth.rs
app/styles/: main.css
app/templates/: base.html  layout.html
app/templates/components/: button-loader.html  loading-button.html  page-loader.html  page-navigation-button.html  page-navigation-link.html  submit-button.html  text-input.html
app/templates/home/: index.html
app/templates/layouts/: auth.html  base.html  home.html
app/templates/pages/: 404.html
app/templates/pages/home/: index.html
app/templates/pages/protected/: index.html
app/templates/pages/signin/: form.html  index.html
app/templates/pages/signup/: form.html  index.html
app/templates/signin/: form.html  index.html
app/templates/signup/: form.html  index.html
app/tests/: asset.rs  auth.rs  main.rs  protected.rs
app/tests/common/: mod.rs
app/tools/cache_buster/: Cargo.toml
app/tools/cache_buster/src/: main.rs
