[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
# TODO: Remove git branch after 0.3.0 is released
askama = { git = "https://github.com/djc/askama", features = ["with-axum"] }
axum = "0.7.5"
dotenv = "0.15.0"
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
validator = { version = "0.18.1", features = ["derive"] }
