[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
# TODO: Remove git branch and use with-axum feature after 0.13.0 is released
askama = { git = "https://github.com/djc/askama" }
askama_axum = { git = "https://github.com/djc/askama" }
async-trait = "0.1.81"
axum = "0.7.5"
axum-login = "0.15.3"
base64 = "0.22.1"
dotenv = "0.15.0"
once_cell = "1.19.0"
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio"] }
time = "0.3.36"
tokio = { version = "1.39.1", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.5.0", features = ["util"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tower-sessions = { version = "0.12.2", features = ["signed"] }
tower-sessions-sqlx-store = { version = "0.13.0", features = ["postgres"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
